test_suite/tests/ui/float/visibility/inner_field.stderr
error: Oh, setting visibility for the inner field is forbidden by #[nutype].
       The whole point is to guarantee that no value can be created without passing the guards (sanitizers and validators).
       I hope for your understanding and wishing you a good sunny day!
 --> tests/ui/float/visibility/inner_field.rs:4:17
  |
4 | struct Distance(pub f32);
  |                 ^^^
